// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AddNotificationButtonClosed Renders 1`] = `
<DragDropContextProvider
  backend={[Function]}
>
  <DragSource(AddNotificationButtonClosed)
    setOpenCategory={[MockFunction]}
  >
    <AddNotificationButtonClosed
      connectDragSource={[Function]}
      isDragging={false}
      setOpenCategory={[MockFunction]}
    >
      <div
        className="notification-button-closed"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        <div
          className="card"
        >
          <div
            className="closed-ML--category t-vl-gray"
          >
            <div
              className="ml-icon-container"
            >
              <div
                className="icon-notification ml-icon"
                title="Add Notification"
              />
            </div>
          </div>
        </div>
        <div
          className="card alert-closed-ML"
          style={
            Object {
              "display": "none",
            }
          }
        >
          <div
            className="ML-module d-flex "
          >
            <div
              className="content-5  my-auto mr-5"
            >
              Add data alert
            </div>
            <div
              className="ml-handle"
            >
              <div
                className="icon-grip"
              />
            </div>
          </div>
        </div>
      </div>
    </AddNotificationButtonClosed>
  </DragSource(AddNotificationButtonClosed)>
</DragDropContextProvider>
`;

exports[`AddNotificationButtonOpen Renders 1`] = `
<DragDropContextProvider
  backend={[Function]}
>
  <DragSource(AddNotificationButtonOpen)>
    <AddNotificationButtonOpen
      connectDragPreview={[Function]}
      connectDragSource={[Function]}
      isDragging={false}
    >
      <div
        className="card"
        onClick={[Function]}
      >
        <div
          className="ML-module t-vl-gray d-flex"
        >
          <div
            className="d-flex flex-row align-items-center"
          >
            <div
              className="ml-icon-container"
            >
              <div
                className="icon-notification ml-icon"
              />
            </div>
            <div
              className="content-5 ml-module-name"
            >
              Add data alert
            </div>
          </div>
          <div
            className="ml-handle"
          >
            <div
              className="icon-grip"
            />
          </div>
        </div>
      </div>
    </AddNotificationButtonOpen>
  </DragSource(AddNotificationButtonOpen)>
</DragDropContextProvider>
`;
